--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "@studio-freight/lenis": "^1.0.36",
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.0",
     "next": "14.1.0",
+    "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.20",
+    "@types/react": "18.2.58",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.3"
   }
 }
