--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "nextjs-toploader": "^1.6.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/node": "20.11.20",
