--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@studio-freight/lenis": "^1.0.36",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
+    "gsap": "^3.12.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
@@ -20,7 +21,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@types/node": "20.11.20",
