--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4",
-    "split-type": "^0.3.4"
+    "split-type": "^0.3.4",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/node": "20.11.20",
